	- Rename `SoundSprite` to `Sound`.
	- Rename `GraphicsSprite` to `Sprite`.
	- Rename `EmptyGraphicsSprite` to `EmptySprite`.
- Fix auto-assigned IDs overlapping when adding vehicles.
- Fix encoding of label lists in Action0 properties.
- Fix encoding and decoding of Action 5.
- Fix `min_life` Action0 property size for houses (spec error).
- Add sprite cache.
- Fix decompilation of action 7/9 with value > 4 bytes.
- Optimize memory usage when writing NewGRF.
- Optimize grf file size by removing duplicate sprites (by data).
- Add `Mask`, `FileMask` and `ImageMask` classes to define sprite masks.
- Add `mode` argument to `Mask` with option to overdraw sprite.
- Add `ShipFlags` enum.
- Add support for the extended format in Action1.
- Add `main` function to handle command line arguments.
- Add some VarAction2 variables for houses.
- Add `TTDString` and `TTDIndustry` constants.
- Add `TownGrowthEffect` constants.
- Support using StringRef in Action 0x14 (`SetProperties`).
- Support using StringRef as `NewGRF` `name` and `description`.
- Support encoding of industry layouts.
- Support encoding of tile acceptance lists for houses and industry tiles.
- Add `preferred_blitter` argument to `NewGRF` constructor, possible values `NewGRF.BLITTER_BPP_8` and `NewGRF.BLITTER_BPP_32`.
- Add `StringManager.get_persistent_id` function to register strings in "persistent" range (0xDCxx).
- Add `Sprite.save_gif` method to generate palette animated images.
- Add init_id_map command line command to initialize id_map.json.
- Add `Date` type to represent dates that don't fit into `datetime.date`.
- Start auto-assiged IDs from 0 for INDUSTRY_TILE feature.
- Remove `Mask` offset, add `FileMask` absolute positioning.
- Rename `AlternativeSprites.get_zoom` to `get_sprite` and add bpp argument.
- Rename some of the Action0 properties for `CARGO` to match nml.
- Don't write redundant actions for railtypes without fallbacks in railtype table.
