@@ -1,0 +1,8 @@
+{
+    "version": 1,
+    "index": {
+        "industry_tile": {
+            "__industry_0_main_tile": 0
+        }
+    }
+}
