@@ -4,4 +4,5 @@ from .rv import *
 from .train import *
 from .ship import *
 from .object import *
+from .industry import *
 from .misc import *
